[EXPERIMENT] Make CI use split repo
And then reuse Central cache across jobs, while
the rest (locally installed) are throwaway.